Small fixes. Updated Readme.md. Config form now correctly displays on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -158,3 +158,21 @@ input::-webkit-inner-spin-button {
 #genome {
   font-size: 1rem;
 }
+
+@media screen and (max-height: 900px) {
+  #form-container label {
+    padding: 0;
+    margin: 0 0 0.25em 0;
+    font-size: 1.1rem;
+  }
+  #form-container {
+    /* padding: 1rem 1.5rem; */
+    box-sizing: border-box;
+    width: 90%;
+  }
+  #form-container input,
+  #form-container button {
+    font-size: 1em;
+    /* height: 1.5em; */
+  }
+}
